# EcoVesti

./: .gitignore  Dockerfile  Procfile  README.md  alternative-sustainable-products.md  final-product-report.md  main.py  product-information.md  pyproject.toml  requirements.txt  vercel.json
config/: tasks.yaml
src/ecovesti_v2/: crew.py  main.py
src/ecovesti_v2/config/: agents.yaml  tasks.yaml
src/ecovesti_v2/static/: final_product_report_latest.txt  script.js  styles.css
src/ecovesti_v2/templates/: index.html
src/ecovesti_v2/tools/: webtools.py
static/: script.js  styles.css
templates/: index.html
